3.0.0-rc6
- P4A_DB_Source::addJoin*() methods now support the schema name as the last
  param
- FCKEditor was updated to 2.6.1

3.0.0-rc5
- P4A_Table's CSS was beautified a bit
- _disabled icons were removed, opacity: 0.2 filter is added to buttons
  to simulate the disabled effect
- P4A_Message's CSS was changed due to the variation of its usage, 
  now it's not black/bold anymore
- P4A_Table's order/row indicators were replaced with HTML entities
  removing the need for icons
- default fonts in CSS were changed because of the lack of some UTF-8
  characters in IE6
- P4A_Menu' submenu indicator icon was replaced with an HTML entity
  which is applied by a javascript function because the indicator
  has no reason to be in the HTML
- spacer.png image was removed 'cause unused
- loading.gif was moved from icons directory to theme directory
- some new constants were added to customize theme colors
- a bug with PNG uploads under IE was fixed
- separator.png icon was removed
- P4A_Toolbar' separators are now rendered as empty divs instead of
  an image
- P4A_Toolbar' were switched from P4A_Image to P4A_Box
- P4A_Toolbar::setSize() method now checks if buttons have the setSize
  method to propagate it, otherwise tries the setHeight method, otherwise
  throws a warning
- P4A_Message default size was changed to 32
- 48 pixels icons were removed
- a gradient was added to some elements in the default theme
- P4A::messageInfo(), messageWarning() and messageError() methods
  were added wrapping P4A::message() method
- P4A icons now implements the freedesktop icon naming specifications:
  http://standards.freedesktop.org/icon-naming-spec/icon-naming-spec-latest.html
- P4A_Mask's default icon size was changed from 48 to 32
- P4A_Table_Navigation_Bar's current page indicator was switched from a
  P4A_Label to a P4A_Box because the P4A_Label has to be bundled with a
  P4A_Field
- a nice shadow effect was added to system messages and tooltips if