@@ -2,6 +2,8 @@
 - P4A_DB_Source::addJoin*() methods now support the schema name as the last
   param
 - FCKEditor was updated to 2.6.1
+- P4A_EXCEPTION_HANDLER and P4A_ERROR_HANDLER constants were added so now
+  you can set your own error/exception handlers
 
 3.0.0-rc5
 - P4A_Table's CSS was beautified a bit
